--- a/java-homework-1.html
+++ b/java-homework-1.html
@@ -25,6 +25,18 @@
     console.log(e);
     var f = d/e;
     console.log(f); /*100*/
+    var first = 'Amanda';
+    console.log(first);
+    var middle = 'Leigha';
+    console.log(middle);
+    var last = 'Bray';
+    console.log(last);
+    var name = first + middle + last;
+    console.log(name);
+    var statement = 'my name is ' + name;
+    console.log(statement);
+    var greeting = 'Hi, ' + statement;
+    console.log(greeting);
   </script>
 </head>
 </html>
